Add Karaoke Nite logo to the room (top left)

--- a/public/room.html
+++ b/public/room.html
@@ -162,6 +162,7 @@
         </div>
       </footer>
     </div>
+
     <div id="songModal" class="modal">
       <div class="jukeboxes" onscroll="dismissAddedNotice()">
         <button onclick="grabURL(event, 0)" class="jukebox" type="button">
@@ -788,6 +789,13 @@
         </button>
       </div>
     </div>
+
+    <!-- =========== Karaoke Nite Logo Top Left ============-->
+
+    <h1 id="scene-logo">
+      <a href="https://karaokenite.co" target="_blank"> KARAOKE NITE </a>
+      <span class="brand-betatag">beta</span>
+    </h1>
 
     <!-- ================== Invite Modal ==================== -->
 
