--- a/public/room.html
+++ b/public/room.html
@@ -56,6 +56,11 @@
           <video class="video-camera" id="peer-video"></video>
           <div class="video-username">Username2</div>
         </div>
+
+        <div class="video">
+          <video class="video-camera" id="peer-video2"></video>
+          <div class="video-username">Username3</div>
+        </div>
       </div>
 
       <!-- ======================================= Footer ======================================== -->
@@ -1056,9 +1061,12 @@
       // });
     </script>
   </body>
-  <script src="/js/playback.js"></script>
-  <script src="/js/video-player.js"></script>
+  //
+  <script src="/socket.io/socket.io.js"></script>
+
+  <script src="/js/playback-new.js"></script>
+  <script src="/js/video-player-new.js"></script>
 
   <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-  <script src="/chat.js"></script>
+  <script src="/js/chat.js"></script>
 </html>
