--- a/public/room.html
+++ b/public/room.html
@@ -31,7 +31,9 @@
           </a>
         </div>
         <div class="info-section">
-          <button class="button" onclick="inviteModal()">Invite Friends</button>
+          <button class="button" onclick="inviteModal()">
+            Invite <span class="hidden__xs">Friends</span>
+          </button>
           <button
             class="button"
             id="feedback"
@@ -84,7 +86,9 @@
           <div id="footer--content">
             <div class="footer-left">
               <a href="javascript:history.back()"
-                ><button class="button button__small" id="leaveRoomButton">Exit</button></a
+                ><button class="button button__small" id="leaveRoomButton">
+                  Exit
+                </button></a
               >
             </div>
 
