--- a/public/blog.html
+++ b/public/blog.html
@@ -43,6 +43,11 @@
       rel="icon"
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    type="text/css"
+  />
     <link href="/styles/vendor.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
     <link href="/styles/blog.css" rel="stylesheet" type="text/css" />
@@ -51,7 +56,7 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-
+    <script src="/js/main.js"></script>
     <script type="text/javascript" src="js/header.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
