--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,11 @@
       rel="icon"
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <link href="/styles/vendor.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
     <link href="/styles/index.css" rel="stylesheet" type="text/css" />
@@ -52,7 +57,7 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-
+    <script src="/js/main.js"></script>
     <script type="text/javascript" src="js/header.js"></script>
 
     <!-- Font -->
@@ -94,13 +99,13 @@
     </script>
   </head>
 
-  <!-- Do not delete this. This changes http -> https.
-<script>
-if (location.protocol != 'https:') {
- location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}
-</script>
--->
+  <script>
+    if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
+      location.href =
+        'https:' +
+        window.location.href.substring(window.location.protocol.length);
+    }
+  </script>
 
   <body id="home" class="dark">
     <div>
