--- a/public/scene.html
+++ b/public/scene.html
@@ -60,9 +60,15 @@
       rel="icon"
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
-
-    <link href="/styles/scene.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/scene.css" rel="stylesheet" type="text/css" />
+    <script src="/js/main.js"></script>
+
     <!-- Karaoke Playlist (mp4's) -->
 
     <!-- Hotjar Tracking Code for https://www.karaokenite.co -->
