--- a/public/faq.html
+++ b/public/faq.html
@@ -44,6 +44,10 @@
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <link href="/styles/vendor.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
     <link href="/styles/faq.css" rel="stylesheet" type="text/css" />
@@ -52,7 +56,7 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-
+    <script src="/js/main.js"></script>
     <script type="text/javascript" src="js/header.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
