--- a/public/room.html
+++ b/public/room.html
@@ -38,7 +38,7 @@
         </div>
         <div class="info-section">
           <button class="button" onclick="inviteModal()">
-            Invite <span class="hidden__xs">Friends</span>
+            Invite <span class="hidden__xs">&nbsp;Friends</span>
           </button>
           <button
             class="button"
