Updated landing page language

--- a/public/index.html
+++ b/public/index.html
@@ -241,9 +241,7 @@
                 id="hero-logo"
               />
             </div>
-            <p class="hero-tagline">
-              Get your friends together during quarantine!
-            </p>
+            <p class="hero-tagline">Sing with friends together on the web!</p>
           </div>
           <div class="join-form" id="now">
             <h2 class="page-subtitle text__center">JOIN A ROOM (FREE)</h2>
