Hide controls within the karaoke video

--- a/public/room.html
+++ b/public/room.html
@@ -56,7 +56,7 @@
         <div class="group">
           <div class="karaoke-video-mask">
             <!-- <video id="video" controls preload="metadata" poster="img/poster.jpg"> -->
-            <video id="karaoke-video" controls preload="metadata">
+            <video id="karaoke-video" preload="metadata">
               <source
                 src="https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fletsgetitonencoded.mp4?v=1588473010045"
                 type="video/mp4"
