Update padding in the Invite Friends modal and Feedback modal

--- a/public/room.html
+++ b/public/room.html
@@ -1067,7 +1067,7 @@
 
     <div id="feedbackModal" class="modal">
       <div class="light">
-        <h2>Give us feedback!</h2>
+        <h1>What do you think?</h1>
         <p>
           Karaoke Nite is an ongoing project. We're looking to hear your
           thoughts on how to make it even better!
@@ -1081,7 +1081,6 @@
           title="Give Feedback"
           >Give Feedback</a
         >
-
         <br />
 
         <a
