Updated copy link URL

--- a/public/room.html
+++ b/public/room.html
@@ -1047,7 +1047,11 @@
           <br />🔑 The room name is <span alt="Room name" id="roomName"></span>
         </p>
         <div class="copyWrapper">
-          <input type="text" value="https://www.karaokenite.co" id="myInput" />
+          <input
+            type="text"
+            value="https://yc-interview.glitch.me"
+            id="myInput"
+          />
           <div class="tooltip">
             <button
               class="button button-bold"
