Turn back on buttons in the room and use optional chaining to prevent bad key lookups

--- a/public/room.html
+++ b/public/room.html
@@ -1305,5 +1305,5 @@
   </script>
 
   <script src="/js/playback-new.js"></script>
-  <!-- <script src="/js/video-player-new.js"></script> -->
+  <script src="/js/video-player-new.js"></script>
 </html>
