Comment out chat button and emoji button

--- a/public/room.html
+++ b/public/room.html
@@ -234,7 +234,7 @@
                   />
                 </button>
 
-                <button
+                <!-- <button
                   id="chatButton"
                   type="button"
                   data-state="chat"
@@ -244,9 +244,9 @@
                     id="chatIcon"
                     src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcomment.svg?v=1621415647510"
                   />
-                </button>
+                </button> -->
 
-                <button
+                <!-- <button
                   id="heartButton"
                   type="button"
                   data-state="heart"
@@ -256,7 +256,7 @@
                     id="heartIcon"
                     src="https://cdn.glitch.com/f69fa717-be61-48e8-9ad2-e8edd524fe90%2FHeart.svg?v=1621070361140"
                   />
-                </button>
+                </button> -->
               </div>
             </div>
           </div>
