Fix up structure and remove unnecessary lerna stuff

--- a/public/blog.html
+++ b/public/blog.html
@@ -124,7 +124,7 @@
     <header role="banner" class="header">
       <nav class="navbar">
         <div class="navbar-section navbar-section__left">
-          <a class="navbar-link__home" href="/">
+          <a class="navbar-link__logo" href="/">
             <h1 class="brand-logo">
               KARAOKE NITE
               <span class="brand-betatag">beta</span>
