--- a/public/room.html
+++ b/public/room.html
@@ -34,7 +34,7 @@
     <div class="room-container">
       <div class="info-container">
         <div class="info-section">
-          <a class="navbar-link navbar-link__home" href="/" target="_blank">
+          <a class="navbar-link navbar-link__logo" href="/" target="_blank">
             <h1 class="brand-logo">
               KARAOKE NITE
               <span class="brand-betatag">beta</span>
