--- a/public/faq.html
+++ b/public/faq.html
@@ -123,7 +123,7 @@
     <header role="banner" class="header">
       <nav class="navbar">
         <div class="navbar-section navbar-section__left">
-          <a class="navbar-link__home" href="/">
+          <a class="navbar-link__logo" href="/">
             <h1 class="brand-logo">
               KARAOKE NITE
               <span class="brand-betatag">beta</span>
